--- a/Moerwald.Specflow.Extension.Storage.Test/Moerwald.Specflow.Storage.Test.csproj
+++ b/Moerwald.Specflow.Extension.Storage.Test/Moerwald.Specflow.Storage.Test.csproj
@@ -56,10 +56,26 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Steps.cs" />
+    <Compile Include="StoreValueFromTable.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>StoreValueFromTable.feature</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="StoreValueFromTable.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>StoreValueFromTable.feature.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Moerwald.Specflow.Extension.Storage\Moerwald.Specflow.Storage.csproj">
+      <Project>{9de81f82-faa8-4f3e-90aa-8e1d3b894345}</Project>
+      <Name>Moerwald.Specflow.Storage</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SpecFlow.2.3.2\build\SpecFlow.targets" Condition="Exists('..\packages\SpecFlow.2.3.2\build\SpecFlow.targets')" />
