--- a/Moerwald.Specflow.Extension.Storage/Moerwald.Specflow.Storage.csproj
+++ b/Moerwald.Specflow.Extension.Storage/Moerwald.Specflow.Storage.csproj
@@ -9,10 +9,11 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Moerwald.Specflow.Storage</RootNamespace>
     <AssemblyName>Moerwald.Specflow.Storage</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,9 +53,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ColumnNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage.cs" />
     <Compile Include="TableParser.cs" />
+    <Compile Include="TableParsingException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
