--- a/Moerwald.Specflow.Extension.Storage/Moerwald.Specflow.Storage.csproj
+++ b/Moerwald.Specflow.Extension.Storage/Moerwald.Specflow.Storage.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ColumnNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage.cs" />
+    <Compile Include="TableInjectException.cs" />
     <Compile Include="TableParser.cs" />
     <Compile Include="TableParsingException.cs" />
   </ItemGroup>
