--- a/Moerwald.Specflow.Extension.Storage/SpecflowExtension.Storage.csproj
+++ b/Moerwald.Specflow.Extension.Storage/SpecflowExtension.Storage.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B32EDE77-C60B-4E5D-BA9D-1B0B999E359C}</ProjectGuid>
+    <ProjectGuid>{9DE81F82-FAA8-4F3E-90AA-8E1D3B894345}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Moerwald.Specflow.Storage.Test</RootNamespace>
-    <AssemblyName>Moerwald.Specflow.Storage.Test</AssemblyName>
+    <RootNamespace>SpecflowExtension.Storage</RootNamespace>
+    <AssemblyName>SpecflowExtension.Storage</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,13 +36,11 @@
     <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="nunit.framework, Version=3.0.5797.27534, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.0.0\lib\net45\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+    <Reference Include="System.ValueTuple">
       <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -55,28 +54,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColumnNames.cs" />
-    <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Steps.cs" />
-    <Compile Include="StoreValueFromTable.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>StoreValueFromTable.feature</DependentUpon>
-    </Compile>
+    <Compile Include="Storage.cs" />
+    <Compile Include="TableInjectException.cs" />
+    <Compile Include="TableInjector.cs" />
+    <Compile Include="TableParser.cs" />
+    <Compile Include="TableParsingException.cs" />
+    <Compile Include="TablePersistor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <None Include="StoreValueFromTable.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>StoreValueFromTable.feature.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Moerwald.Specflow.Extension.Storage\Moerwald.Specflow.Storage.csproj">
-      <Project>{9de81f82-faa8-4f3e-90aa-8e1d3b894345}</Project>
-      <Name>Moerwald.Specflow.Storage</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SpecFlow.2.3.2\build\SpecFlow.targets" Condition="Exists('..\packages\SpecFlow.2.3.2\build\SpecFlow.targets')" />
