--- a/Moerwald.Specflow.Extension.Storage/SpecflowExtension.Storage.csproj
+++ b/Moerwald.Specflow.Extension.Storage/SpecflowExtension.Storage.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ColumnNames.cs" />
+    <Compile Include="IRowHasTablePersistorOnlyValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Storage.cs" />
     <Compile Include="TableInjectException.cs" />
