Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,8 @@ steps:
 
 - task: SonarCloudPrepare@1
   inputs:
+    SonarCloud: 'Sonarcloud'
+    organization: 'moerwald-github'
     scannerMode: 'MSBuild'
     projectKey: 'moerwald_Specflow.Storage'
     projectName: 'Specflow.Storage'
